--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^0.8.5+3
   intl: ^0.18.0
-  flutter_local_notifications: ^19.1.0
-  timezone: ^0.10.0
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.10.1
   permission_handler: ^10.2.0
   logger: ^1.1.0
   google_fonts: ^6.2.1
+  flutter_timezone: ^4.1.0
 
 dev_dependencies:
   flutter_test:
